<resources>
    <string name="app_name">FitnessTracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_sleepsound">sleepsound</string>
    <string name="title_activity_sleep_tracker">SleepTracker</string>
    <string name="total_sleep_time">Total Sleep Time</string>
    <string name="example_date">Date</string>
    <string name="example_time">Time Slept</string>
    <string name="button_start">Snooze</string>
    <string name="button_awake">Awake</string>
    <string name="enter_serving_size">enter serving size</string>
    <string name="enter">enter</string>
    <string name="enter_no_of_servings">Enter no of servings</string>
    <string name="hear_a_lullaby">Hear a Lullaby</string>
    <string name="track_your_sleep">track your sleep</string>
    <string name="calorie_counter">Calorie Counter</string>
    <string name="search">Search</string>
    <string name="enter_food_item">Enter food item</string>
    <string name="view_graph">View Graph</string>
    <string name="title_activity_lullaby">lullaby</string>
</resources>
