<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:padding="25dp"
    >

    <Button
        android:id="@+id/sleepsound_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="149dp"
        android:text="@string/hear_a_lullaby" />
    <Button
        android:id = "@+id/sleeptracker_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/track_your_sleep"
        android:layout_below="@+id/sleepsound_btn"
        />
    <Button
        android:id = "@+id/caloriecounter_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calorie_counter"
        android:layout_below="@+id/sleeptracker_btn"
        />

</RelativeLayout>